--- a/index.html
+++ b/index.html
@@ -29,25 +29,26 @@
           av pelletsovner.
         </p>
         <p>
-          Mange fornøyde kunder kan bekrefte at denne miljøvennlige energiformen er
-          fremtiden.
+          Ved siden av denne hovedsatsing tilbyr vi:
         </p>
-        <p>
-          Ved siden av denne hovedsatsing tilbyr vi salg av vedovner, treprodukter
-          og mye mer.
-        </p>
+        <ul>
+          <li>Salg av vedovner</li>
+          <li>Rehabilitering av piper og stålpiper</li>
+          <li>Utleie av lift</li>
+          <li>Salg av treprodukter</li>
+          <li>Salg av hagemaskiner</li>
+        </ul>
         <hr>
       </main>
       <footer class="page-footer">
         <small class="two-column-container">
           <p>
-            <strong>E-post:</strong> arild.waage(alfakrøll)dabb.no<br/>
-            <strong>Mob:</strong> 975 48 105
+            <strong>Sør-Vest Biobrensel</strong><br/>
+            Bøhamrane 5, 4380 Hauge i Dalane<br/>
           </p>
           <p>
-            <strong>Sør-Vest Biobrensel</strong><br/>
-            Bøhamrane 5<br/>
-            4380 Hauge i Dalane<br/>
+            <strong>E-post:</strong> arild.waage(alfakrøll)dabb.no<br/>
+            <strong>Mob:</strong> 975 48 105
           </p>
         </small>
       </footer>
