--- a/index.html
+++ b/index.html
@@ -38,17 +38,18 @@
           <li>Salg av treprodukter</li>
           <li>Salg av hagemaskiner</li>
         </ul>
+        <p>Ta kontakt for nærmere avtale.</p>
         <hr>
       </main>
       <footer class="page-footer">
         <small class="two-column-container">
           <p>
-            <strong>Sør-Vest Biobrensel</strong><br/>
-            Bøhamrane 5, 4380 Hauge i Dalane<br/>
+            <strong>E-post:</strong> <a href="mailto:arild.waage@dabb.no?subject=Forespørsel via svbio.no">arild.waage@dabb.no</a><br/>
+            <strong>Mob:</strong> 975 48 105
           </p>
           <p>
-            <strong>E-post:</strong> arild.waage(alfakrøll)dabb.no<br/>
-            <strong>Mob:</strong> 975 48 105
+            <strong>Sør-Vest Biobrensel</strong><br/>
+            Bøhamrane 5, 4380 Hauge i Dalane<br/>
           </p>
         </small>
       </footer>
