--- a/index.html
+++ b/index.html
@@ -1,58 +1,1 @@
-<!DOCTYPE html>
-<html lang="nb">
-  <head>
-    <meta charset="utf-8">
-    <title>Sør-Vest Biobrensel - Effektiv varme!</title>
-    <meta name="description" content="Sør-Vest Biobrensel er din total levrandør innen økonomisparende fyringsløsninger. Vi selger og installerer bla.a. pelletskamin, vedovn, solvarme løsninger m.m.">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <meta property="og:title" content="Sør-Vest Biobrensel - Effektiv varme!">
-    <meta property="og:url" content="https://svbio.no">
-
-
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="/normalize.1114379f.css">
-    <link rel="stylesheet" href="/style.78032849.css">
-
-  <script src="/normalize.1114379f.js"></script><script src="/style.78032849.js"></script></head>
-
-  <body>
-    <div class="grid">
-      <header class="column page-header">
-        <object class="logo" data="/logo_sor-vest_biobrensel.3b959a90.svg" type="image/svg+xml">Sør-Vest Biobrensel logo</object>
-      </header>
-      <main class="column">
-        <p>
-          </p><h1 class="inline h3">Sør Vest Biobrensel</h1>
-          har lang erfaring i salg, installasjon og vedlikehold
-          av pelletsovner.
-        <p></p>
-        <p>
-          Ved siden av denne hovedsatsing tilbyr vi:
-        </p>
-        <ul>
-          <li>Salg av vedovner</li>
-          <li>Rehabilitering av piper og stålpiper</li>
-          <li>Utleie av lift</li>
-          <li>Salg av treprodukter</li>
-          <li>Salg av hagemaskiner</li>
-        </ul>
-        <p>Ta kontakt for nærmere avtale.</p>
-        <hr>
-      </main>
-      <footer class="page-footer">
-        <small class="two-column-container">
-          <p>
-            <strong>E-post:</strong> <a href="mailto:arild.waage@dabb.no?subject=Forespørsel via svbio.no">arild.waage@dabb.no</a><br>
-            <strong>Mob:</strong> 975 48 105
-          </p>
-          <p>
-            <strong>Sør-Vest Biobrensel</strong><br>
-            Bøhamrane 5, 4380 Hauge i Dalane<br>
-          </p>
-        </small>
-      </footer>
-    </div>
-  </body>
-</html>
+<!DOCTYPE html><html lang="nb"><head><meta charset="utf-8"><title>Sør-Vest Biobrensel - Effektiv varme!</title><meta name="description" content="Sør-Vest Biobrensel er din total levrandør innen økonomisparende fyringsløsninger. Vi selger og installerer bla.a. pelletskamin, vedovn, solvarme løsninger m.m."><meta name="viewport" content="width=device-width, initial-scale=1"><meta property="og:title" content="Sør-Vest Biobrensel - Effektiv varme!"><meta property="og:url" content="https://svbio.no"><link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500&display=swap" rel="stylesheet"><link rel="stylesheet" href="normalize.dfca19ee.css"><link rel="stylesheet" href="style.dd595a3a.css"></head><body> <div class="grid"> <header class="column page-header"> <object class="logo" data="logo_sor-vest_biobrensel.f9888f8a.svg" type="image/svg+xml">Sør-Vest Biobrensel logo</object> </header> <main class="column"> <p> </p><h1 class="inline h3">Sør Vest Biobrensel</h1> har lang erfaring i salg, installasjon og vedlikehold av pelletsovner. <p></p> <p> Ved siden av denne hovedsatsing tilbyr vi: </p> <ul> <li>Salg av vedovner</li> <li>Rehabilitering av piper og stålpiper</li> <li>Utleie av lift</li> <li>Salg av treprodukter</li> <li>Salg av hagemaskiner</li> </ul> <p>Ta kontakt for nærmere avtale.</p> <hr> </main> <footer class="page-footer"> <small class="two-column-container"> <p> <strong>E-post:</strong> <a href="mailto:arild.waage@dabb.no?subject=Forespørsel via svbio.no">arild.waage@dabb.no</a><br> <strong>Mob:</strong> 975 48 105 </p> <p> <strong>Sør-Vest Biobrensel</strong><br> Bøhamrane 5, 4380 Hauge i Dalane<br> </p> </small> </footer> </div> </body></html>
