Update content and adjust style

--- a/index.html
+++ b/index.html
@@ -23,22 +23,28 @@
         <object class="logo" data="/img/logo_sor-vest_biobrensel.svg" type="image/svg+xml">Sør-Vest Biobrensel logo</object>
       </header>
       <main class="column">
-        <p>
-          <h1 class="inline h3">Sør Vest Biobrensel</h1>
-          har lang erfaring i salg, installasjon og vedlikehold
-          av pelletsovner.
-        </p>
-        <p>
-          Ved siden av denne hovedsatsing tilbyr vi:
-        </p>
+        <h1>Sør-Vest Biobrensel</h1>
+        <a href="mailto:arild.waage@dabb.no?subject=Forespørsel via svbio.no" class="button">Ta kontakt for å få utført jobber til fastpris</a>
+        <h2>Varme</h2>
         <ul>
-          <li>Salg av vedovner</li>
-          <li>Rehabilitering av piper og stålpiper</li>
-          <li>Utleie av lift</li>
-          <li>Salg av treprodukter</li>
-          <li>Salg av hagemaskiner</li>
+          <li>Rehabilitering av  piper/skorsteiner (Schiedel) </li>
+          <li>Elementpiper  (Schiedel)</li>
+          <li>Stålpiper (Schiedel)</li>
+          <li>Salg av vedovner (de fleste merker)</li>
+          <li>Rørdeler til vedovner og underlagsplater (Helmin)</li>
+          <li>Brannmurer (brannmurplater 5 cm tykke) godkjente av  SINTEF</li>
+          <li>Bygger peiser etter eget ønske</li>
         </ul>
-        <p>Ta kontakt for nærmere avtale.</p>
+        <h2>Sagbruk</h2>
+        <ul>
+          <li>Eget Sagbruk (band-sag) dimisjoner max 70 cm</li>
+          <li>Sager etter eget ønske</li>
+        </ul>
+        <h2>Utleie</h2>
+        <ul>
+          <li>Utleie av lift Omme, høyde 18,3 meter</li>
+        </ul>
+        <p>Kommer på befaring og gir fastpris.</p>
         <hr>
       </main>
       <footer class="page-footer">
@@ -49,7 +55,9 @@
           </p>
           <p>
             <strong>Sør-Vest Biobrensel</strong><br/>
+            Arild Waage<br/>
             Bøhamrane 5, 4380 Hauge i Dalane<br/>
+            <strong>Org.nr.</strong> 981 071 352
           </p>
         </small>
       </footer>
