--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="/normalize.1114379f.css">
-    <link rel="stylesheet" href="/style.78032849.css">
+    <link rel="stylesheet" href="/index.e80563da.css">
+    <link rel="stylesheet" href="/index.ea68c68a.css">
 
-  <script src="/normalize.1114379f.js"></script><script src="/style.78032849.js"></script></head>
+  </head>
 
   <body>
     <div class="grid">
       <header class="column page-header">
-        <object class="logo" data="/logo_sor-vest_biobrensel.3b959a90.svg" type="image/svg+xml">Sør-Vest Biobrensel logo</object>
+        <object class="logo" data="/logo_sor-vest_biobrensel.de2e9bc1.svg" type="image/svg+xml">Sør-Vest Biobrensel logo</object>
       </header>
       <main class="column">
         <h1>Sør-Vest Biobrensel</h1>
@@ -64,3 +64,4 @@
     </div>
   </body>
 </html>
+<script src="/index.3ebff041.js"></script>
