--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
           <li>Eget Sagbruk (band-sag) dimisjoner max 70 cm</li>
           <li>Sager etter eget ønske</li>
         </ul>
-        <h2>Utleie</h2>
+        <h2>Annet</h2>
         <ul>
           <li>Utleie av lift Omme, høyde 18,3 meter</li>
+          <li>Salg av Grammer førerstoler</li>
         </ul>
         <p>Kommer på befaring og gir fastpris.</p>
         <hr>
