Add images in a carousel

--- a/index.html
+++ b/index.html
@@ -21,10 +21,31 @@
     <div class="grid">
       <header class="column page-header">
         <object class="logo" data="/img/logo_sor-vest_biobrensel.svg" type="image/svg+xml">Sør-Vest Biobrensel logo</object>
+        <div class="gallery-wrapper">
+          <div class="swiper-container">
+            <div class="swiper-wrapper">
+              <figure class="swiper-slide">
+                <img class="" src="/img/ildsted.jpg" alt="Ildsted">
+                <figcaption>Ildsted</figcaption>
+              </figure>
+              <figure class="swiper-slide">
+                <img class="" src="/img/svbio-piper.jpg" alt="Utvendig pipe">
+                <figcaption>Utvendig pipe</figcaption>
+              </figure>
+              <figure class="swiper-slide">
+                <img class="" src="/img/rehabilitering.jpg" alt="Rehabilitering av pipe">
+                <figcaption>Rehabilitering av pipe</figcaption>
+              </figure>
+              <figure class="swiper-slide">
+                <img class="" src="/img/sete.jpg" alt="Grammer førerstol">
+                <figcaption>Grammer førerstoler</figcaption>
+              </figure>
+            </div>
+          </div>
+        </div>
       </header>
-      <main class="column">
-        <h1>Sør-Vest Biobrensel</h1>
-        <a href="mailto:arild.waage@dabb.no?subject=Forespørsel via svbio.no" class="button">Ta kontakt for å få utført jobber til fastpris</a>
+      <main class="column page-content">
+        <h1 class="visually-hidden">Sør-Vest Biobrensel</h1>
         <h2>Varme</h2>
         <ul>
           <li>Rehabilitering av  piper/skorsteiner (Schiedel) </li>
@@ -46,6 +67,7 @@
           <li>Salg av Grammer førerstoler</li>
         </ul>
         <p>Kommer på befaring og gir fastpris.</p>
+        <a href="mailto:arild.waage@dabb.no?subject=Forespørsel via svbio.no" class="button">Ta kontakt for å få utført jobber til fastpris</a>
         <hr>
       </main>
       <footer class="page-footer">
@@ -63,5 +85,6 @@
         </small>
       </footer>
     </div>
+    <script src="js/app.js"></script>
   </body>
 </html>
