Update text on front page

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
         <ul>
           <li>Eget Sagbruk (band-sag) dimisjoner max 70 cm</li>
           <li>Sager etter eget ønske</li>
+          <li>Salg av tretjære</li>
         </ul>
         <h2>Annet</h2>
         <ul>
